tests/reference/asr-test_list4-d18a7e3.stderr
semantic error: Type mismatch in index, expected a single integer or slice
 --> tests/errors/test_list4.py:7:11
  |
7 |     x = a[0.2]
  |           ^^^ type mismatch (found: 'f64', expected: 'i32' or slice)
